crates/tirea-state-derive/tests/ui/derive_lattice_tuple_struct.stderr
error: #[derive(Lattice)] does not support tuple structs
 --> tests/ui/derive_lattice_tuple_struct.rs:4:1
  |
4 | struct Bad(i32, i32);
  | ^^^^^^^^^^^^^^^^^^^^^
