crates/tirea-state-derive/tests/ui/derive_lattice_tuple_struct.rs
use tirea_state_derive::Lattice;

#[derive(Clone, PartialEq, Lattice)]
struct Bad(i32, i32);

fn main() {}
